Implementaciones
Implementacion de metodos faltantes de usuario, reporte y comentario.