@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
 public class ComentarioServicioImpl implements ComentarioServicio {
@@ -21,30 +20,28 @@ public class ComentarioServicioImpl implements ComentarioServicio {
     private final ComentarioRepositorio comentarioRepositorio;
 
     @Override
-    public MensajeDTO<String> crearComentario(ComentarioDTO comentarioDTO) {
-        Comentario comentario = new Comentario();
-        comentario.setIdReporte(new ObjectId(comentarioDTO.getIdReporte()));
-        comentario.setIdUsuario(new ObjectId(comentarioDTO.getIdUsuario()));
-        comentario.setContenido(comentarioDTO.getContenido());
-        comentario.setFechaCreacion(LocalDateTime.now());
+    public MensajeDTO<String> crearComentario(ComentarioDTO dto) {
+        Comentario comentario = Comentario.builder()
+                .contenido(dto.getContenido())
+                .fecha(LocalDateTime.now())
+                .idUsuario(new ObjectId(dto.getIdUsuario()))
+                .idReporte(new ObjectId(dto.getIdReporte()))
+                .build();
 
         comentarioRepositorio.save(comentario);
-        return new MensajeDTO<>(false, "Comentario agregado exitosamente");
+        return new MensajeDTO<>(false, "Comentario creado correctamente");
     }
 
     @Override
     public List<ComentarioRespuestaDTO> obtenerComentariosPorReporte(String idReporte) {
         List<Comentario> comentarios = comentarioRepositorio.findByIdReporte(new ObjectId(idReporte));
-
-        return comentarios.stream()
-                .map(comentario -> new ComentarioRespuestaDTO(
-                        comentario.getId().toString(),
-                        comentario.getIdReporte().toString(),
-                        comentario.getIdUsuario().toString(),
-                        comentario.getContenido(),
-                        comentario.getFechaCreacion().toString()
-                ))
-                .collect(Collectors.toList());
+        return comentarios.stream().map(c ->
+                ComentarioRespuestaDTO.builder()
+                        .id(c.getId().toHexString())
+                        .contenido(c.getContenido())
+                        .fecha(c.getFecha())
+                        .idUsuario(c.getIdUsuario().toHexString())
+                        .build()
+        ).toList();
     }
 }
-
